layout bug fix

--- a/showfinder/components/favorite/favorite.module.css
+++ b/showfinder/components/favorite/favorite.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   width: 86vw;
-  margin-left: 5rem;
+  margin-left: 14rem;
 }
 
 .showsContainer {
